fix: multi controlnet value doesn't changed

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -262,8 +262,10 @@
         "    with capture.capture_output() as cap:\n",
         "      os.chdir(repo_dir)\n",
         "      config = read_config(config_file)\n",
-        "      config[\"disabled_extensions\"].append(\"stable-diffusion-webui\")\n",
-        "      write_config(config_file, config)\n",
+        "      if not \"stable-diffusion-webui\" in config[\"disabled_extensions\"]:\n",
+        "        config[\"disabled_extensions\"].append(\"stable-diffusion-webui\")\n",
+        "        write_config(config_file, config)\n",
+        "      \n",
         "      !git remote set-url origin https://github.com/anapnoe/stable-diffusion-webui/\n",
         "      !git pull\n",
         "      if ui_commit_hash:\n",
@@ -274,8 +276,9 @@
         "    print(\"\u001b[1;32mAn error occurred:\", e)\n",
         "else:\n",
         "  config = read_config(config_file)\n",
-        "  config[\"disabled_extensions\"].remove(\"stable-diffusion-webui\")\n",
-        "  write_config(config_file, config)  \n",
+        "  if \"stable-diffusion-webui\" in config[\"disabled_extensions\"]:\n",
+        "      config[\"disabled_extensions\"].remove(\"stable-diffusion-webui\")\n",
+        "      write_config(config_file, config) \n",
         "\n",
         "with capture.capture_output() as cap:\n",
         "  if git_pull:\n",
@@ -666,12 +669,10 @@
         "ngrok_region = \"ap\" #@param [\"us\", \"eu\", \"au\", \"ap\", \"sa\", \"jp\", \"in\"]\n",
         "\n",
         "#@markdown ### ControlNet Config:\n",
-        "multi_controlnet = 2 #@param {type:\"slider\", min:1, max:10, step:1}\n",
-        "controlnet_py = \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py\"\n",
-        "!sed -i 's/\\(shared\\.opts\\.data\\.get(\"control_net_max_models_num\",\\) [0-9]*/\\1 '\"$multi_controlnet\"'/' {controlnet_py}\n",
-        "\n",
+        "multi_controlnet = 3 #@param {type:\"slider\", min:1, max:10, step:1}\n",
+        "config_file = os.path.join(repo_dir, \"config.json\")\n",
+        "      \n",
         "#@markdown ### Arguments\n",
-        "\n",
         "medvram = False #@param {type: 'boolean'}\n",
         "load_in_vram = True #@param {type: 'boolean'}\n",
         "silent_launch = True #@param {type: 'boolean'}\n",
@@ -679,6 +680,19 @@
         "auto_model = False #@param {type: 'boolean'}\n",
         "no_half_vae = True #@param {type: 'boolean'}\n",
         "additional_args = \"--xformers\" #@param {type: 'string'}\n",
+        "\n",
+        "def read_config(filename):\n",
+        "  with open(filename, \"r\") as f:\n",
+        "    config = json.load(f)\n",
+        "  return config\n",
+        "\n",
+        "def write_config(filename, config):\n",
+        "  with open(filename, \"w\") as f:\n",
+        "    json.dump(config, f, indent=4)\n",
+        "\n",
+        "config = read_config(config_file)\n",
+        "config[\"control_net_max_models_num\"] = multi_controlnet\n",
+        "write_config(config_file, config)\n",
         "\n",
         "if auto_model:\n",
         "  models_list = os.listdir(models_dir)\n",
