feat: added a feature to auto extract zip and lz4

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -162,11 +162,11 @@
         "#@markdown ### Anapnoe UI/UX Config\n",
         "use_anapnoe_ui = True #@param {type:'boolean'}\n",
         "# stable commit hash : 3cd625854f9dc71235a432703ba82abfc5d1a3fc\n",
-        "ui_commit_hash = \"a3fdbb5c2794203625db2e1b9bcc241769df73c5\" #@param {type:'string'}\n",
+        "ui_commit_hash = \"\" #@param {type:'string'}\n",
         "\n",
         "#@markdown ### Repo Config\n",
         "output_to_drive = False #@param {type:'boolean'}\n",
-        "commit_hash = \"3c922d983bf60ba187b5422b3690e6b7fb07777e\" #@param {type:'string'}\n",
+        "commit_hash = \"\" #@param {type:'string'}\n",
         "git_pull = False #@param {type:'boolean'}\n",
         "clean_install = False #@param {type:'boolean'}\n",
         "load_v2_in_vram = True #@param {type:'boolean'}\n",
@@ -563,6 +563,24 @@
         "custom_components_url = \"\" #@param {'type': 'string'}\n",
         "custom_upscaler_url = \"\" #@param {'type': 'string'}\n",
         "\n",
+        "def extract(url, dst):\n",
+        "  if not url.startswith(\"/content/\"):\n",
+        "    filename = os.path.basename(url)\n",
+        "    zipfile = os.path.join(dst, filename)\n",
+        "  else: \n",
+        "    zipfile = url\n",
+        "\n",
+        "  if url.endswith(\".zip\"):\n",
+        "    if os.path.exists(zipfile):\n",
+        "      !unzip -j -o {zipfile} -d \"{dst}\"\n",
+        "      os.remove(zipfile)\n",
+        "  elif url.endswith(\".tar.lz4\"):\n",
+        "    if os.path.exists(zipfile):\n",
+        "      !tar -xI lz4 -f {zipfile} --directory={dst}\n",
+        "      os.remove(zipfile)\n",
+        "  else:\n",
+        "    pass\n",
+        "\n",
         "def download(url_list, dst_dir, download_list, is_extensions):\n",
         "  downloaded=[]\n",
         "  for url in tqdm(url_list, desc=\"\u001b[1;32mDownloading Custom URLs\"):\n",
@@ -590,9 +608,12 @@
         "            !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {dst_dir} -o {basename} {url}\n",
         "        else:\n",
         "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {dst_dir} {url}\n",
+        "        \n",
+        "        extract(url, dst_dir)\n",
+        "\n",
         "      del cap\n",
         "      downloaded.append((basename, dst_dir))\n",
-        "      \n",
+        "\n",
         "custom_download_list = []\n",
         "\n",
         "custom_dirs = {\n",
