fix: set `git pull` for webui and extensions to `false`

--- a/cagliostro_colab_ui.ipynb
+++ b/cagliostro_colab_ui.ipynb
@@ -14,26 +14,10 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "![](https://visitor-badge.glitch.me/badge?page_id=linaqruf.cag-webui) [![GitHub](https://badgen.net/badge/icon/github?icon=github&label)](https://github.com/Linaqruf/sd-notebook-collection/blob/main/cagliostro-colab-ui.ipynb) \n",
+        "![](https://visitor-badge.glitch.me/badge?page_id=linaqruf.cag-webui) [![GitHub](https://badgen.net/badge/icon/github?icon=github&label)](https://github.com/Linaqruf/sd-notebook-collection/blob/main/cagliostro-colab-ui.ipynb) [![](https://dcbadge.vercel.app/api/shield/850007095775723532?style=flat)](https://lookup.guru/850007095775723532) [![ko-fi](https://img.shields.io/badge/Support%20me%20on%20Ko--fi-F16061?logo=ko-fi&logoColor=white&style=flat)](https://ko-fi.com/linaqruf) <a href=\"https://saweria.co/linaqruf\"><img alt=\"Saweria\" src=\"https://img.shields.io/badge/Saweria-7B3F00?style=flat&logo=ko-fi&logoColor=white\"/></a> \n",
         "\n",
         "# **Cagliostro Colab UI**\n",
         "All-in-One, Customizable and Flexible AUTOMATIC1111's Stable Diffusion Web UI for Google Colab. <br>\n",
-        "\n",
-        "<details>\n",
-        "  <summary><big>Support Us!</big></summary>\n",
-        "    <ul>\n",
-        "      <li>\n",
-        "        <a href=\"https://ko-fi.com/linaqruf\">\n",
-        "          <img src=\"https://img.shields.io/badge/Support%20me%20on%20Ko--fi-F16061?logo=ko-fi&logoColor=white&style=flat\" alt=\"Ko-fi badge\">\n",
-        "        </a>\n",
-        "      </li>\n",
-        "      <li>\n",
-        "        <a href=\"https://saweria.co/linaqruf\">\n",
-        "          <img src=\"https://img.shields.io/badge/Saweria-7B3F00?style=flat&logo=ko-fi&logoColor=white\" alt=\"Saweria badge\">\n",
-        "        </a>\n",
-        "      </li>\n",
-        "    </ul>\n",
-        "</details>\n",
         "\n",
         "<details>\n",
         "  <summary><big>Credits</big></summary>\n",
@@ -47,6 +31,54 @@
         "\n",
         "<details>\n",
         "  <summary><big>What's New?</big></summary>\n",
+        " <font color=gray>v.2.0.0 (27/03/23)</font>\n",
+        "  <ul>\n",
+        "    <li>Reformat notebook with <a href=\"https://github.com/psf/black\">black python formatter</a></li>\n",
+        "    <li>Update Web UI and all extensions version (not latest)</li>\n",
+        "    <li>Downgrade <code>xformers</code> to <code>0.0.16</code></li>\n",
+        "    <li>Downgrade <code>triton</code> to <code>2.0.0</code></li>\n",
+        "    <li>Set both <code>lora_dir</code> and<code>additional_networks_extra_lora_path</code> path to <code>os.path.join(repo_dir, \"models/Lora\")</code></li>\n",
+        "    <li>Set <code>lora_dir</code> path to <code>os.path.join(repo_dir, \"models/ControlNet\")</code></li>\n",
+        "    <li>Reset Anapnoe UI commit hash to <code>802fb8a16ba4bdbfba0dca55f9cdb265f4bd86f2</code></li>\n",
+        "    <li>Force reset commit hash to <code>3b47b000199ea8baf724080936ef985f53b3d081</code> when <code>use_anapnoe_ui</code> is enabled</li>\n",
+        "    <li>Added <code>mount_drive</code> function</code></li>\n",
+        "    <li>Added more error handling</li>\n",
+        "    <li>Set some environment variables:</li>\n",
+        "            <ul>\n",
+        "            <li>os.environ['colab_url'] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")</li>\n",
+        "            <li>os.environ[\"LD_PRELOAD\"] = \"libtcmalloc.so\"</li>\n",
+        "            <li>os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"</li>\n",
+        "            <li>os.environ[\"SAFETENSORS_FAST_GPU\"]= '1'</li>\n",
+        "        </ul>\n",
+        "    <li>Added 3 new default model</li>\n",
+        "        <ul>\n",
+        "            <li><a href=\"https://huggingface.co/Linaqruf/anything-v3.0\">Anything V3.0</a></li>\n",
+        "            <li><a href=\"https://huggingface.co/Lykon/AnyLoRA\">AnyLoRA</a></li>\n",
+        "            <li><a href=\"https://huggingface.co/Lykon/AnimePastelDream\">Anime Pastel Dream</a></li>\n",
+        "        </ul>\n",
+        "    <li>Deleted 3 default model</li>\n",
+        "        <ul>\n",
+        "            <li>Anything V3.2</li>\n",
+        "            <li>Anything V3.3</li>\n",
+        "            <li>HoloKuki V2</li>\n",
+        "        </ul>\n",
+        "    <li>Changed <code>Chillout-Mix</code> to <code>Chillout-Mix-Ni</code></li>\n",
+        "    <li>Changed <code>Illuminati V1.1</code> download link from CivitAI to Huggingface</li>\n",
+        "    <li>Put all ControlNet things to new separated cell</li>\n",
+        "         <ul>\n",
+        "            <li>Added <code>pre_download_annotator</code> back</li>\n",
+        "            <li>Added <code>sd21_control_model</code></li>\n",
+        "            <li>Added <code>wd15_control_model</code></li>\n",
+        "            <li>Added option to change ControlNet model and Adapter config outside Web UI</li>\n",
+        "        </ul>\n",
+        "    <li>Added support for load custom url from Google Drive, tricky, by copying from Google Drive to destination path.</li>\n",
+        "    <li>Set <code>--multiple</code> as default alternative tunnels, please don't use Gradio URL at the moment</li>\n",
+        "         <ul>\n",
+        "            <li>Recommended Tunnels:</code></li>\n",
+        "            <li><code>ngrok</code> > <code>cloudflared</code> > <code>remotemoe</code> > <code>localhostrun</code> > <code>googleusercontent</code> > <code>gradio</code></li>\n",
+        "        </ul>    \n",
+        "  </ul>\n",
+        "  <br> \n",
         "<font color=gray>v.1.4.1 (11/03/23)</font>\n",
         "  <ul>\n",
         "    <li>Trying to establish my own style, deleted all possible NoCrypt and TheLastBen's code legacy</li>\n",
@@ -108,6 +140,22 @@
       ],
       "metadata": {
         "id": "WgQr3s96015a"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "```\n",
+        "[WARNING!]\n",
+        "\n",
+        "!!! PLEASE DO NOT GIT PULL OR UPDATE EXTENSIONS AT THE MOMENT, AS THIS MAY PREVENT YOU FROM BEING ABLE TO USE LORA. !!!\n",
+        "\n",
+        "- THE BUILT-IN LORA FEATURE IS RECEIVING AN UPDATE AND WILL NOW USE PYTHON 3.10 SYNTAX. \n",
+        "- THE LOCON EXTENSIONS ARE ALSO BEING UPDATED TO USE PYTHON 3.10 SYNTAX, FOLLOWING THE CHANGES MADE TO THE BUILT-IN LORA FEATURE.\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "inCePgCzLtRV"
       }
     },
     {
@@ -196,7 +244,7 @@
         "colab_optimizations = True  # @param {type:'boolean'}\n",
         "\n",
         "# @markdown ### Built-In Extensions Config\n",
-        "update_extensions = True  # @param {type:'boolean'}\n",
+        "update_extensions = False  # @param {type:'boolean'}\n",
         "\n",
         "# model\n",
         "os.chdir(root_dir)\n",
@@ -272,11 +320,7 @@
         "        \"deb-libs.zip\",\n",
         "        deps_dir,\n",
         "    )\n",
-        "    \n",
-        "    os.environ['colab_url'] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")\n",
-        "    os.environ[\"LD_PRELOAD\"] = \"libtcmalloc.so\"\n",
-        "    os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
-        "    os.environ[\"SAFETENSORS_FAST_GPU\"]='1'   \n",
+        " \n",
         "    del cap\n",
         "\n",
         "if clean_install:\n",
@@ -317,6 +361,7 @@
         "        config = read_config(config_file)\n",
         "        if not \"stable-diffusion-webui\" in config[\"disabled_extensions\"]:\n",
         "            config[\"disabled_extensions\"].append(\"stable-diffusion-webui\")\n",
+        "            config[\"disabled_extensions\"].append(\"stable-diffusion-webui-state\")\n",
         "            write_config(config_file, config)\n",
         "\n",
         "        with capture.capture_output() as cap:\n",
@@ -426,6 +471,12 @@
         "    else:\n",
         "        mins, secs = divmod(elapsed_time, 60)\n",
         "        print(f\"\\n\u001b[1;32mAll extensions are up to date. Took {mins} mins {secs} sec\")\n",
+        "\n",
+        "    \n",
+        "os.environ['colab_url'] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")\n",
+        "os.environ[\"LD_PRELOAD\"] = \"libtcmalloc.so\"\n",
+        "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
+        "os.environ[\"SAFETENSORS_FAST_GPU\"]='1'  \n",
         "\n",
         "print(\"\u001b[1;32mAll is done! Go to the next step.\")"
       ],
