feat: clean install webui

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -143,22 +143,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "```\n",
-        "[WARNING!]\n",
-        "\n",
-        "!!! PLEASE DO NOT GIT PULL OR UPDATE EXTENSIONS AT THE MOMENT, AS THIS MAY PREVENT YOU FROM BEING ABLE TO USE LORA. !!!\n",
-        "\n",
-        "- THE BUILT-IN LORA FEATURE IS RECEIVING AN UPDATE AND WILL NOW USE PYTHON 3.10 SYNTAX. \n",
-        "- THE LOCON EXTENSIONS ARE ALSO BEING UPDATED TO USE PYTHON 3.10 SYNTAX, FOLLOWING THE CHANGES MADE TO THE BUILT-IN LORA FEATURE.\n",
-        "```"
-      ],
-      "metadata": {
-        "id": "inCePgCzLtRV"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# @title ## **Install Stable Diffusion Web UI**\n",
@@ -244,7 +228,7 @@
         "colab_optimizations = True  # @param {type:'boolean'}\n",
         "\n",
         "# @markdown ### Built-In Extensions Config\n",
-        "update_extensions = False  # @param {type:'boolean'}\n",
+        "update_extensions = True  # @param {type:'boolean'}\n",
         "\n",
         "# model\n",
         "os.chdir(root_dir)\n",
@@ -743,6 +727,7 @@
         "    config[\"control_net_model_config\"] = os.path.join(extensions_dir, os.path.join(\"sd-webui-controlnet/models\", control_net_model_config))\n",
         "    config[\"control_net_model_adapter_config\"] = os.path.join(extensions_dir, os.path.join(\"sd-webui-controlnet/models\", control_net_model_adapter_config))\n",
         "    config[\"control_net_models_path\"] = control_dir\n",
+        "    config[\"control_net_allow_script_control\"] = True\n",
         "    write_config(config_file, config)\n",
         "  \n",
         "    if pre_download_annotator:\n",
@@ -947,24 +932,36 @@
         "import random\n",
         "%store -r \n",
         "\n",
-        "#@markdown ### Gradio Auth\n",
-        "user = \"\" #@param {type:\"string\"}\n",
-        "password= \"\" #@param {type:\"string\"}\n",
+        "# @markdown ### Gradio Auth\n",
+        "user = \"\" # @param {type:\"string\"}\n",
+        "password= \"\" # @param {type:\"string\"}\n",
         "\n",
-        "#@markdown ### Alternative Tunnel\n",
-        "alt_tunnel = \"multiple\" #@param ['none', 'multiple','cloudflared', 'localhostrun', 'remotemoe', \"googleusercontent\"]\n",
-        "#@markdown > Get <b>your</b> token for ngrok [here](https://dashboard.ngrok.com/get-started/your-authtoken) \n",
-        "ngrok_token = \"\" #@param {type: 'string'}\n",
-        "ngrok_region = \"ap\" #@param [\"us\", \"eu\", \"au\", \"ap\", \"sa\", \"jp\", \"in\"]\n",
+        "# @markdown ### Alternative Tunnel\n",
+        "alt_tunnel = \"multiple\" # @param ['none', 'multiple','cloudflared', 'localhostrun', 'remotemoe', \"googleusercontent\"]\n",
+        "# @markdown > Get <b>your</b> token for ngrok [here](https://dashboard.ngrok.com/get-started/your-authtoken) \n",
+        "ngrok_token = \"\" # @param {type: 'string'}\n",
+        "ngrok_region = \"ap\" # @param [\"us\", \"eu\", \"au\", \"ap\", \"sa\", \"jp\", \"in\"]\n",
         "\n",
-        "#@markdown ### Arguments\n",
-        "medvram = False #@param {type: 'boolean'}\n",
-        "load_in_vram = True #@param {type: 'boolean'}\n",
-        "silent_launch = True #@param {type: 'boolean'}\n",
-        "auto_vae = False #@param {type: 'boolean'}\n",
-        "auto_model = False #@param {type: 'boolean'}\n",
-        "no_half_vae = True #@param {type: 'boolean'}\n",
+        "# @markdown ### Arguments\n",
+        "medvram = False # @param {type: 'boolean'}\n",
+        "load_in_vram = True # @param {type: 'boolean'}\n",
+        "silent_launch = True # @param {type: 'boolean'}\n",
+        "auto_model = False # @param {type: 'boolean'}\n",
+        "auto_vae = True # @param {type: 'boolean'}\n",
+        "no_half_vae = True # @param {type: 'boolean'}\n",
         "additional_args = \"--xformers\" #@param {type: 'string'}\n",
+        "\n",
+        "config_file = os.path.join(repo_dir, \"config.json\")\n",
+        "ui_config_file = os.path.join(repo_dir, \"ui-config.json\")\n",
+        "\n",
+        "default_prompt = \"masterpiece, best quality,\"\n",
+        "default_neg_prompt = \"(worst quality, low quality:1.4)\"\n",
+        "default_sampler = \"DPM++ 2M Karras\"\n",
+        "default_steps = 20\n",
+        "default_width = 512\n",
+        "default_height = 768\n",
+        "default_denoising_strength = 0.55\n",
+        "default_cfg_scale = 7\n",
         "\n",
         "def read_config(filename):\n",
         "    with open(filename, \"r\") as f:\n",
@@ -976,46 +973,77 @@
         "    with open(filename, \"w\") as f:\n",
         "      json.dump(config, f, indent=4)\n",
         "\n",
+        "if auto_model:\n",
+        "    models_list = os.listdir(models_dir)\n",
+        "    model_files = [f for f in models_list if f.endswith(('.ckpt','.safetensors'))]\n",
+        "    if model_files:\n",
+        "        model_path = random.choice(model_files)\n",
         "\n",
+        "if auto_vae:\n",
+        "    vaes_list = os.listdir(vaes_dir)\n",
+        "    vae_files = [f for f in vaes_list if f.endswith('.vae.pt')]\n",
+        "    if vae_files:\n",
+        "        vae_path = random.choice(vae_files)\n",
+        "\n",
+        "# config.json\n",
         "config = read_config(config_file)\n",
         "config[\"additional_networks_extra_lora_path\"] = lora_dir\n",
+        "config[\"CLIP_stop_at_last_layers\"] = 2\n",
+        "config[\"eta_noise_seed_delta\"] = 0\n",
+        "config[\"show_progress_every_n_steps\"] = 10\n",
+        "config[\"show_progressbar\"] = True\n",
+        "if auto_model and os.path.exists(os.path.join(models_dir, model_path)):\n",
+        "    config[\"sd_model_checkpoint\"] = model_path\n",
+        "if auto_vae and os.path.exists(os.path.join(vaes_dir, vae_path)):\n",
+        "    config[\"sd_vae\"] = vae_path\n",
+        "config[\"quicksettings\"] = \"sd_model_checkpoint, sd_vae, CLIP_stop_at_last_layers, use_old_karras_scheduler_sigmas, always_discard_next_to_last_sigma\"\n",
         "write_config(config_file, config)\n",
         "\n",
-        "if auto_model:\n",
-        "  models_list = os.listdir(models_dir)\n",
-        "  model_files = [f for f in models_list if f.endswith(('.ckpt','.safetensors'))]\n",
-        "  if model_files:\n",
-        "      model_path = os.path.join(models_dir, random.choice(model_files))\n",
-        "if auto_vae:\n",
-        "  vaes_list = os.listdir(vaes_dir)\n",
-        "  vae_files = [f for f in vaes_list if f.endswith('.vae.pt')]\n",
-        "  if vae_files:\n",
-        "      vae_path = os.path.join(vaes_dir, random.choice(vae_files))\n",
-        "        \n",
+        "# ui-config.json\n",
+        "# txt2img\n",
+        "config = read_config(ui_config_file)\n",
+        "config[\"txt2img/Prompt/value\"] = default_prompt\n",
+        "config[\"txt2img/Negative prompt/value\"] = default_neg_prompt\n",
+        "config[\"txt2img/Sampling method/value\"] = default_sampler\n",
+        "config[\"txt2img/Sampling steps/value\"] = default_steps\n",
+        "config[\"txt2img/Width/value\"] = default_width\n",
+        "config[\"txt2img/Height/value\"] = default_height\n",
+        "config[\"txt2img/Upscaler/value\"] = \"Latent (nearest-exact)\"\n",
+        "config[\"txt2img/Denoising strength/value\"] = default_denoising_strength\n",
+        "config[\"txt2img/CFG Scale/value\"] = default_cfg_scale\n",
+        "# img2img\n",
+        "config[\"img2img/Prompt/value\"] = default_prompt\n",
+        "config[\"img2img/Negative prompt/value\"] = default_neg_prompt\n",
+        "config[\"img2img/Sampling method/value\"] = default_sampler\n",
+        "config[\"img2img/Sampling steps/value\"] = default_steps\n",
+        "config[\"img2img/Width/value\"] = default_width\n",
+        "config[\"img2img/Height/value\"] = default_height\n",
+        "config[\"img2img/Denoising strength/value\"] = default_denoising_strength\n",
+        "config[\"img2img/CFG Scale/value\"] = default_cfg_scale\n",
+        "write_config(ui_config_file, config)\n",
+        "          \n",
         "os.chdir(repo_dir)\n",
         "\n",
         "print(\"\u001b[1;32m\")\n",
         "\n",
         "!python launch.py \\\n",
-        "  --enable-insecure-extension-access \\\n",
-        "  --disable-safe-unpickle \\\n",
-        "  {\"--\" + alt_tunnel if not alt_tunnel == \"none\" and not ngrok_token else \"\"} \\\n",
-        "  {\"--ckpt \" + model_path if auto_model and os.path.exists(model_path) else \"\"} \\\n",
-        "  {\"--vae-path \" + vae_path if auto_vae and os.path.exists(vae_path) else \"\"} \\\n",
-        "  {\"--medvram\" if medvram else \"\"} \\\n",
-        "  {\"--share\" if not ngrok_token else \"\"} \\\n",
-        "  {\"--gradio-auth \" + user + \":\" + password if user and password else \"\"} \\\n",
-        "  {\"--no-half-vae\" if no_half_vae else \"\"} \\\n",
-        "  {\"--lowram\" if load_in_vram else \"\"} \\\n",
-        "  {\"--no-hashing\" if silent_launch else \"\"} \\\n",
-        "  {\"--disable-console-progressbars\" if silent_launch else \"\"} \\\n",
-        "  {\"--ngrok \" + ngrok_token if ngrok_token else \"\"} \\\n",
-        "  {\"--ngrok-region \" + ngrok_region if ngrok_token else \"\"} \\\n",
-        "  --gradio-queue \\\n",
-        "  --opt-sub-quad-attention \\\n",
-        "  --opt-channelslast \\\n",
-        "  --theme dark \\\n",
-        "  {additional_args}"
+        "    --enable-insecure-extension-access \\\n",
+        "    --disable-safe-unpickle \\\n",
+        "    {\"--\" + alt_tunnel if not alt_tunnel == \"none\" and not ngrok_token else \"\"} \\\n",
+        "    {\"--medvram\" if medvram else \"\"} \\\n",
+        "    {\"--share\" if not ngrok_token else \"\"} \\\n",
+        "    {\"--gradio-auth \" + user + \":\" + password if user and password else \"\"} \\\n",
+        "    {\"--no-half-vae\" if no_half_vae else \"\"} \\\n",
+        "    {\"--lowram\" if load_in_vram else \"\"} \\\n",
+        "    {\"--no-hashing\" if silent_launch else \"\"} \\\n",
+        "    {\"--disable-console-progressbars\" if silent_launch else \"\"} \\\n",
+        "    {\"--ngrok \" + ngrok_token if ngrok_token else \"\"} \\\n",
+        "    {\"--ngrok-region \" + ngrok_region if ngrok_token else \"\"} \\\n",
+        "    --gradio-queue \\\n",
+        "    --opt-sub-quad-attention \\\n",
+        "    --opt-channelslast \\\n",
+        "    --theme dark \\\n",
+        "    {additional_args}"
       ]
     },
     {
