fix: change `auto_model` and `auto_vae` logic

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -31,6 +31,14 @@
         "\n",
         "<details>\n",
         "  <summary><big>What's New?</big></summary>\n",
+        "  <br>\n",
+        " <font color=gray>v.2.0.1 (27/03/23)</font>\n",
+        "  <ul>\n",
+        "    <li>Clean install and update Web UI to latest version, commit hash : <code>955df7751eef11bb7697e2d77f6b8a6226b21e13</code></li>\n",
+        "    <li>Manually edit <code>config.json</code> and <code>ui-config.json</code></li>\n",
+        "    <li>Change <code>auto_model</code> and <code>auto_vae</code> logic, change <code>config.json</code> instead of using <code>--vae_path</code> and <code>--ckpt</code> </li>\n",
+        "  </ul>\n",
+        "  <br>\n",
         " <font color=gray>v.2.0.0 (27/03/23)</font>\n",
         "  <ul>\n",
         "    <li>Reformat notebook with <a href=\"https://github.com/psf/black\">black python formatter</a></li>\n",
