fix: specify xformers version (0.0.16)

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -277,7 +277,7 @@
         "    with capture.capture_output() as cap:\n",
         "        if not \"T4\" in s:\n",
         "            !pip uninstall -y xformers\n",
-        "            !pip install -q xformers triton\n",
+        "            !pip install -q xformers==0.0.16 triton==2.0.0\n",
         "        del cap\n",
         "\n",
         "    !git config --global user.email \"you@example.com\"\n",
