fix: temporary fix

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -361,6 +361,8 @@
         "            !git pull\n",
         "            del cap\n",
         "\n",
+        "        !sed -i -e 's/checkout {commithash}/checkout --force {commithash}/g' /content/stable-diffusion-webui/launch.py\n",
+        "        \n",
         "        if ui_commit_hash:\n",
         "            try:\n",
         "                with capture.capture_output() as cap:\n",
