--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -218,7 +218,7 @@
         "config_file = os.path.join(repo_dir, \"config.json\")\n",
         "\n",
         "# @markdown ### Anapnoe UI/UX Config\n",
-        "use_anapnoe_ui = True  # @param {type:'boolean'}\n",
+        "use_anapnoe_ui = False  # @param {type:'boolean'}\n",
         "\n",
         "ui_commit_hash = \"802fb8a16ba4bdbfba0dca55f9cdb265f4bd86f2\"  # @param {type:'string'}\n",
         "stable_commit_hash = \"3b47b000199ea8baf724080936ef985f53b3d081\"\n",
