--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -218,9 +218,9 @@
         "config_file = os.path.join(repo_dir, \"config.json\")\n",
         "\n",
         "# @markdown ### Anapnoe UI/UX Config\n",
-        "use_anapnoe_ui = False  # @param {type:'boolean'}\n",
+        "use_anapnoe_ui = True  # @param {type:'boolean'}\n",
         "\n",
-        "ui_commit_hash = \"802fb8a16ba4bdbfba0dca55f9cdb265f4bd86f2\"  # @param {type:'string'}\n",
+        "ui_commit_hash = \"\"  # @param {type:'string'}\n",
         "stable_commit_hash = \"3b47b000199ea8baf724080936ef985f53b3d081\"\n",
         "\n",
         "# @markdown ### Drive Config\n",
@@ -358,11 +358,10 @@
         "\n",
         "        with capture.capture_output() as cap:\n",
         "            !git remote set-url origin https://github.com/anapnoe/stable-diffusion-webui/\n",
+        "            !git reset --hard HEAD\n",
         "            !git pull\n",
         "            del cap\n",
         "\n",
-        "        !sed -i -e 's/checkout {commithash}/checkout --force {commithash}/g' /content/stable-diffusion-webui/launch.py\n",
-        "        \n",
         "        if ui_commit_hash:\n",
         "            try:\n",
         "                with capture.capture_output() as cap:\n",
@@ -371,6 +370,9 @@
         "                print(\"\u001b[1;32mUI Commit hash: \", ui_commit_hash)\n",
         "            except Exception as e:\n",
         "                print(\"\u001b[1;32mAn error occurred while resetting the commit hash:\", e)\n",
+        "\n",
+        "        !sed -i -e 's/checkout {commithash}/checkout --force {commithash}/g' /content/stable-diffusion-webui/launch.py\n",
+        "\n",
         "    except Exception as e:\n",
         "        print(\"\u001b[1;32mAn error occurred:\", e)\n",
         "else:\n",
