fix: final fix working

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -220,7 +220,7 @@
         "# @markdown ### Anapnoe UI/UX Config\n",
         "use_anapnoe_ui = True  # @param {type:'boolean'}\n",
         "\n",
-        "ui_commit_hash = \"\"  # @param {type:'string'}\n",
+        "ui_commit_hash = \"608c684b0f5794b13b6cadc0ee76f584edff24ec\"  # @param {type:'string'}\n",
         "stable_commit_hash = \"3b47b000199ea8baf724080936ef985f53b3d081\"\n",
         "\n",
         "# @markdown ### Drive Config\n",
@@ -358,8 +358,8 @@
         "\n",
         "        with capture.capture_output() as cap:\n",
         "            !git remote set-url origin https://github.com/anapnoe/stable-diffusion-webui/\n",
-        "            !git reset --hard HEAD\n",
         "            !git pull\n",
+        "            \n",
         "            del cap\n",
         "\n",
         "        if ui_commit_hash:\n",
